fixed product name. break into new line

--- a/src/component/cartOverlay/cart-overlay.scss
+++ b/src/component/cartOverlay/cart-overlay.scss
@@ -10,11 +10,13 @@
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   padding: 32px 16px;
   gap: 32px;
+  .link {
+    text-decoration: none;
+  }
   .my-bag {
     width: 118px;
     height: 26px;
     align-self: flex-start;
-    font-family: "Raleway";
     font-style: normal;
     font-weight: 700;
     font-size: 16px;
@@ -61,7 +63,6 @@
     .amount {
       width: 95px;
       height: 26px;
-      font-family: "Raleway";
       font-style: normal;
       font-weight: 700;
       font-size: 16px;
@@ -100,7 +101,7 @@
     }
   }
 }
-/ div.cart-details::-webkit-scrollbar {
+div.cart-details::-webkit-scrollbar {
   width: 4px;
 }
 
