--- a/src/component/cartOverlay/cartItem/cart-item.scss
+++ b/src/component/cartOverlay/cartItem/cart-item.scss
@@ -48,35 +48,24 @@
 
     .title {
       width: 136px;
-      height: 52px;
-
-      font-family: "Raleway";
-      font-style: normal;
+      height: fit;
       font-weight: 300;
       font-size: 16px;
       line-height: 160%;
       width: 136px;
       height: 52px;
-
-      font-family: "Raleway";
-      font-style: normal;
+      color: $secondaryColor;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+    }
+    .subtitle {
+      width: 136px;
+      height: 52px;
       font-weight: 300;
       font-size: 16px;
-      line-height: 160%;
-
-      display: flex;
-      align-items: center;
-
-      color: $secondaryColor;
-
-      display: flex;
-      align-items: center;
-
-      color: #1d1f22;
     }
-
     .price {
-      font-family: "Raleway";
       font-style: normal;
       font-weight: 500;
       font-size: 16px;
@@ -162,29 +151,23 @@
     flex: 1;
     height: auto;
     .title {
-      width: 136px;
-      height: 52px;
-
-      font-family: "Raleway";
-      font-style: normal;
-      font-weight: 300;
+      width: 292px;
+      height: fit-content;
+      font-weight: 600;
       font-size: 30px;
       line-height: 27px;
-      width: 136px;
-      height: 52px;
-
-      font-family: "Raleway";
-      font-style: normal;
-      font-weight: 600;
-      font-size: 16px;
-      line-height: 160%;
-      display: flex;
-      align-items: center;
       color: $secondaryColor;
+      display: flex;
+      flex-direction: column;
+      gap: 16px;
     }
-
+    .subtitle {
+      font-weight: 400;
+      font-size: 30px;
+      line-height: 27px;
+    }
     .price {
-      font-family: "Raleway";
+      margin-top: 20px;
       font-style: normal;
       font-weight: 500;
       font-size: 16px;
@@ -235,4 +218,7 @@
   .close-button {
     opacity: 0.9;
   }
+}
+.none {
+  display: none;
 }
